5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1577_1559.log
== SUBMITION (2019-03-15 21:24:19) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.)
-- EXECUTION TIME:
0.186173
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:24:24) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.)
-- ERROR:
File "XXXX", line 2
    print(ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 21:24:41) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.")
-- EXECUTION TIME:
0.199074
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
